--- a/bluebox/templates/status.html
+++ b/bluebox/templates/status.html
@@ -9,7 +9,7 @@
     <h2>Cards</h2>
     <ul>
       {% for c in cards %}
-        <li>{{c}}</li>
+        <li class="btn btn-default" onclick="document.getElementById('id').value='{{c}}'">{{c}}</li>
       {% end %}
     </ul>
 
@@ -17,7 +17,7 @@
     <form action='/add'>
       <div class="form-group">
         <label>ID</label>
-        <input class="form-control" name='id' type='text'>
+        <input id="id" class="form-control" name='id' type='text'>
       </div>
       <div class="form-group">
         <label>Path</label>
